# libqdlibface

./: CMakeLists.txt  Database.cpp  Database.h  Descriptor.cpp  Face.cpp  Face.h  QDLibFaceConfig.cmake.in  QDLibFaceConfigVersion.cmake.in
